atualiza chave da API e modifica modelo para gemini-2.5; adiciona suporte a usuário no contexto da API ao vivo

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # create your own API KEY at https://aistudio.google.com/apikey
-#REACT_APP_GEMINI_API_KEY=''
+REACT_APP_GEMINI_API_KEY='AIzaSyA3Empp8v9i37VBwE0t291UKoU1c7gB9kE'
